# EarlyStage

./: README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init.py__  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AnalysisResultsPage.jsx  IdeaInputPage.jsx  TemplateSelectionPage.jsx  WelcomeScreen.css  WelcomeScreen.jsx
src/components/: AnalysisResultsPage.jsx  IdeaInputPage.jsx  WelcomeScreen.jsx
