[tool.poetry]
name = "earlystage"
version = "0.1.0"
description = "An application that builds the highest possible quality MVPs in as short a time possible."
authors = ["verykumar <varunkumaranalysis@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
anthropic = "^0.34.2"
openai = "^1.49.0"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
start = "app.main:start"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"